packages/cli/src/verification/gates/formal/__tests__/fixtures/dafny.failed.txt
Error: a postcondition could not be proved on this return path
  | 
  |   ensures result == a + b;
  |   ^^^^^^^^^^^^^^^^^^^^^^^^

Dafny program verifier finished with 1 verified, 2 errors
assertion might not hold
